deploy: 79e5acb9546db6a6ba32bf832f438b066e2f6225

--- a/assets/highlight.css
+++ b/assets/highlight.css
@@ -19,8 +19,8 @@
     --dark-hl-8: #B5CEA8;
     --light-hl-9: #000000;
     --dark-hl-9: #C8C8C8;
-    --light-hl-10: #CD3131;
-    --dark-hl-10: #F44747;
+    --light-hl-10: #0451A5;
+    --dark-hl-10: #9CDCFE;
     --light-code-background: #FFFFFF;
     --dark-code-background: #1E1E1E;
 }
